// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<PublicationFormSubmitButton /> should match the snapshot 1`] = `
<FormSubmitWrapper
  block={true}
  disabled={false}
  form={
    Object {
      "data": Object {
        "publication": Object {
          "abbreviation": "sff",
          "id": "38a6666f-d3eb-4853-bd0a-add4d8ec369a",
          "name": "Spectres of Flumph Fortress",
          "official": false,
          "playtest": true,
          "publicationDate": "2013-08-15",
          "publisherName": "Spelljammer Publishing",
          "slug": "spectres-flumph-fortress",
        },
      },
      "onSubmitAction": [MockFunction],
      "path": Array [
        "publication",
      ],
    }
  }
  outline={true}
>
  Create Publication
</FormSubmitWrapper>
`;

exports[`<PublicationFormSubmitButton /> with isUpdate: true should match the snapshot 1`] = `
<FormSubmitWrapper
  block={true}
  disabled={false}
  form={
    Object {
      "data": Object {
        "publication": Object {
          "abbreviation": "sff",
          "id": "38a6666f-d3eb-4853-bd0a-add4d8ec369a",
          "name": "Spectres of Flumph Fortress",
          "official": false,
          "playtest": true,
          "publicationDate": "2013-08-15",
          "publisherName": "Spelljammer Publishing",
          "slug": "spectres-flumph-fortress",
        },
      },
      "onSubmitAction": [MockFunction],
      "path": Array [
        "publication",
      ],
    }
  }
  outline={true}
>
  Update Publication
</FormSubmitWrapper>
`;
